[project]
name = "healthbot"
version = "0.1.0"
description = "LangGraph HealthBot patient education system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.2.16",
    "langchain-openai==0.1.23",
    "langgraph==0.2.19",
    "langchainhub==0.1.21",
    "tavily-python==0.4.0",
    "langchain-community==0.2.16",
    "python-dotenv==1.0.1",
    "ipykernel",
    "jupyter",
]
